manifests/syncthing.yaml
# Syncthing p2p file synchronization server on Kubernetes
# This is mostly an adaptation of the linuxserver/syncthing docs for docker-compose.
# Kubernetes storage configuration is a pain in the butt so this uses basic NFS by default.
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
  namespace: default
  labels:
    app: syncthing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: syncthing
  template:
    metadata:
      labels:
        app: syncthing
    spec:
      volumes:
        - name: syncthing-data-vol
          persistentVolumeClaim:
            claimName: syncthing-data-pv-claim
        - name: config-vol
          persistentVolumeClaim:
            claimName: syncthing-config-pv-claim
      containers:
        - image: linuxserver/syncthing:latest
          name: syncthing
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8384
            - containerPort: 21027
            - containerPort: 22000
          volumeMounts:
            - name: syncthing-data-vol
              mountPath: /downloads
            - name: config-vol
              mountPath: /config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: syncthing
  name: syncthing
  namespace: default
spec:
  ports:
    - port:
      nodePort: 22000
      protocol: TCP
      targetPort: 22000
      name: sync-protocol-tcp
    - port: 22000
      nodePort: 32000
      protocol: UDP
      targetPort: 22000
      name: sync-protocol-quic
  selector:
    app: syncthing
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: syncthing
  name: syncthing-admin
  namespace: default
spec:
  ports:
    # this should probably not be exposed externally
    # it's the admin webui port
    # just use kubectl port-forward
    - port: 8384
      protocol: TCP
      targetPort: 9091
      name: syncthing-admin
    # syncthing expects this exposed but we don't
    # need it outside the cluster usually
    - port: 21027
      protocol: UDP
      targetPort: 21027
      name: discovery-port
  selector:
    app: syncthing
  type: ClusterIP
