manifests/transmission.yaml
# Transmission Bittorrent client on Kubernetes
# This is mostly an adaptation of the linuxserver/transmission docs for docker-compose.
# Kubernetes storage configuration is a pain in the butt so this uses basic NFS by default.
# You will probably get your account deleted if you deploy this on a public cloud provider's K8s.
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  namespace: default
  labels:
    app: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      volumes:
        - name: torrents-vol
          persistentVolumeClaim:
            claimName: torrents-pv-claim
        - name: config-vol
          persistentVolumeClaim:
            claimName: transmission-config-pv-claim
        - name: watch-vol
          persistentVolumeClaim:
            claimName: transmission-watch-pv-claim
      containers:
        - image: linuxserver/transmission:latest
          name: transmission
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9091
            - containerPort: 51413
          volumeMounts:
            - name: torrents-vol
              mountPath: /downloads
            - name: config-vol
              mountPath: /config
            - name: watch-vol
              mountPath: /watch
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: transmission
  name: transmission
  namespace: default
spec:
  ports:
    - port: 51413
      nodePort: 32000
      protocol: TCP
      targetPort: 51413
      name: bittorrent-tcp
    - port: 51413
      nodePort: 32001
      protocol: UDP
      targetPort: 51413
      name: bittorrent-udp
  selector:
    app: transmission
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: transmission
  name: transmission-admin
  namespace: default
spec:
  ports:
    # this should actually not be exposed externally for any reason
    # it's an HTTP XMLRPC / webui port
    # just use kubectl port-forward
    - port: 9091
      protocol: TCP
      targetPort: 9091
      name: transmission-rpc-admin
  selector:
    app: transmission
  type: ClusterIP
